--- a/backset/client/public/index.html
+++ b/backset/client/public/index.html
@@ -7,6 +7,13 @@
             href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@700&display=swap"
             rel="stylesheet"
         />
+        <meta
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
+        />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <base href="/" />
 
         <title>Study Cafe Forum</title>
     </head>
